edit AccountRe & scss error

--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -57,7 +57,7 @@
       margin: 10px auto 20px auto;
       display: flex;
       flex-direction: column;
-      justify-content: start;
+      justify-content: flex-start;
       transition: 0.3s;
       .service-img {
         img {
