--- a/src/style/_reserveFur.scss
+++ b/src/style/_reserveFur.scss
@@ -14,7 +14,7 @@
     #subtitle {
       margin-bottom: 25px;
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       align-items: center;
       img {
         width: 50px;
